Prevent drag on safari

--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -3821,23 +3821,6 @@ button {
 }
 
 .products-block {
-    position: relative;
-
-    //block child drag
-    &:after{
-        content: "";
-        display: block;
-        height: 100%;
-        width: 100%;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        position: absolute;
-        z-index: 1000;
-        background: rgba(0,0,0,0);
-    }
-
     .image-holder {
         & > div {
             width: 100%;
